--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,8 +10,8 @@
       <div><h1>MERN Application - Admin Interface</h1></div>
       <div>
         <ul>
-          <li><a href="/admin/users">Users</a></li>
-          <li><a href="/admin/prodcts">Products</a></li>
+          <li><a href="/users">Users</a></li>
+          <li><a href="/prodcts">Products</a></li>
         </ul>
       </div>
     </div>
