--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div>&copy; 2026. All rights reserverd.</div>
+  
+    <h1>Home Page</h1>
+
+   
 </body>
 </html>
